# ai-test-pilot

./: .gitignore  LIMITATIONS.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
benchmark/: BENCHMARK_extractors.md  BENCHMARK_extractors_after.md  DETECTION.md  GENERALIZATION.md  MARKETPLACE_CX_AGENT.md  compare.py  cov.py  detection_baseline.json  detection_targets.toml  detection_targets_a3.toml  detection_targets_nodoc.toml  detection_targets_typed.toml  equivalence.py  mutation.py  quality_baseline.json  quality_targets.toml  stats.py
benchmark/baselines/: cosmic_ray_holdout.py  pynguin_runner.py
benchmark/corpora/: humaneval.py  quixbugs.py
benchmark/eval/: EVAL_DETECTION.md
benchmark/fixtures/: a3_typed_sample.py  nodoc_sample.py  (+2 more)
commons/: __init__.py
config/: .env.example  ai_test_pilot.toml
demo/: signup.html
scripts/: cli.py  config.py  llm_client.py  main.md  main.py  mcp_server.py  pipeline.py  prompt_compressor.py  python_pytest.md
tests/: conftest.py  test_assertion_safety.py  test_detection.py  test_equivalence.py  test_feedback.py  test_generate.py  test_golden.py  test_holdout.py  test_introspect.py  test_m2.py  test_m5.py  test_mcp.py  test_mutation.py  test_p1_p2.py  test_p3a.py  test_p3b.py  test_p4.py  test_p6.py  test_promote_discover.py  test_quality.py  test_rejection_d32.py  test_runner_and_config.py  test_stats.py  test_typed_inputs.py  test_typed_inputs_a3.py  test_typed_inputs_phase1.py  test_validator_constraints_phase3.py  test_value_grammar_safety.py  test_web_deep.py  test_web_playwright.py
(+34 files in other folders)
